background issue fixed
added min-height to ensure background isn't clipped

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
     background: linear-gradient(#BEE5EE, #48B8D0);
     background-repeat: no-repeat;
+    min-height: 100vh;
 }
 
 .container {
